--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -17,7 +17,7 @@ http {
 
     server {
         listen 80;
-        server_name localhost;
+        server_name _;
 
         location / {
             # Proxy to backend upstream
