Implement Stage 3 features: add observability with custom Nginx logging, alert watcher service, and Slack notifications

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,9 @@ RELEASE_ID_GREEN=v1.1.0-green
 
 # Application port (internal)
 PORT=8080
+
+# Stage 3: Observability & Alerts
+SLACK_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/WEBHOOK/URL
+ERROR_RATE_THRESHOLD=2
+WINDOW_SIZE=200
+ALERT_COOLDOWN_SEC=300
