--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -3,6 +3,16 @@ events {
 }
 
 http {
+    # Custom log format for observability
+    log_format pool_format '$remote_addr - $remote_user [$time_local] "$request" '
+                          '$status $body_bytes_sent "$http_referer" "$http_user_agent" '
+                          'pool=$http_x_app_pool release=$http_x_release_id '
+                          'upstream_status=$upstream_status upstream=$upstream_addr '
+                          'request_time=$request_time upstream_response_time=$upstream_response_time';
+    
+    # Access log using custom format to shared volume
+    access_log /var/log/nginx/access_real.log pool_format;
+    
     # Define upstream servers
     upstream backend {
         # Primary server (Blue)
